# engiz

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: app_content.rs  lib.rs  main.rs
frontend/src/api/: mod.rs
frontend/src/components/: icon.rs  menu_link.rs  mod.rs  nav_bar.rs
frontend/src/pages/: about.rs  home.rs  mod.rs
frontend/src/pages/navbar_menu/: icon_navbar.rs  mod.rs
frontend/styles/: tailwind.css
