[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.2"
common = { version = "0.1.0", path = "../common" }
frontend = { version = "0.1.0", path = "../frontend" }
yew = { version = "0.21.0", features = ["ssr"] }

serde = { version = "1.0.194", features = ["derive"] }
