[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr", "hydration"] }
yew-router = "0.18.0"
common = { version = "0.1.0", path = "../common" }
reqwest = { version = "0.11.23", features = ["json"] }
wasm-bindgen-futures = "0.4.39"
# wasm-logger = "0.2.0"
# log = "0.4.20"
serde_json = { version = "1.0.111"}
